--- a/YWWACP/YWWACP/Resources/layout/recipeDialogView.axml
+++ b/YWWACP/YWWACP/Resources/layout/recipeDialogView.axml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:weightSum="100">
     <EditText
-        android:inputType="textMultiLine"
+        android:inputType="textCapSentences"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="10"
@@ -17,7 +17,7 @@
         android:gravity="bottom|left"
         local:MvxBind="Text Title" />
     <EditText
-        android:inputType="textMultiLine"
+        android:inputType="textCapSentences|textMultiLine"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="30"
@@ -33,7 +33,7 @@
         android:layout_width="match_parent"
         android:weightSum="100">
         <EditText
-            android:inputType="textMultiLine"
+            android:inputType="textCapSentences|textMultiLine"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -47,7 +47,7 @@
             android:gravity="top|left"
             local:MvxBind="Text Ingredients" />
         <EditText
-            android:inputType="textMultiLine"
+            android:inputType="textCapSentences|textMultiLine"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
