--- a/YWWACP/YWWACP/Resources/layout/ExerciseListViewRow.axml
+++ b/YWWACP/YWWACP/Resources/layout/ExerciseListViewRow.axml
@@ -39,6 +39,6 @@
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:id="@+id/demoImageView"
-            android:src="@drawable/barbell" />
+            android:src="@drawable/exercise" />
     </RelativeLayout>
 </RelativeLayout>
