--- a/YWWACP/YWWACP/Resources/layout/TakePictureView.axml
+++ b/YWWACP/YWWACP/Resources/layout/TakePictureView.axml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:local="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+  <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_height="match_parent">
     <TextView
         android:text="Take a Picture Screen"
         android:layout_width="match_parent"
@@ -21,4 +25,14 @@
         android:layout_height="wrap_content"
         local:MvxBind="Bitmap InMemoryImage(PictureBytes)"
         android:id="@+id/imageView1" />
-</LinearLayout>
+  </LinearLayout>
+  <Button
+      android:text="Add picture"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      local:MvxBind="Click AddPictureCommand"
+      android:layout_alignParentBottom="true"
+      android:id="@+id/button1" />
+  
+  
+</RelativeLayout>
