--- a/YWWACP/YWWACP/Resources/drawable/FirstViewRect.axml
+++ b/YWWACP/YWWACP/Resources/drawable/FirstViewRect.axml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-
+<!--  //Author: Student 9787283, Student Kristoffer Helgesen -->
   <stroke android:width="2px"
    />
   <solid android:color="#FF69B4" />
